fix: remove spacing around gaps matched

--- a/views/scss/qti/_gap-match.scss
+++ b/views/scss/qti/_gap-match.scss
@@ -1,6 +1,10 @@
 @import 'inc/bootstrap';
 
 .qti-gapMatchInteraction {
+    .qti-gap {
+        display: inline-block;
+    }
+
     .gapmatch-content {
         audio,
         canvas,
@@ -10,6 +14,7 @@
         }
 
         border: solid 1px transparent;
+        border-width: 0 0 1px 0;
         border-bottom-color: $textColor;
         background: $uiClickableDefaultBg;
         color: $textColor;
@@ -39,6 +44,12 @@
             background: $uiGeneralContentBg;
             cursor: pointer;
             padding-block: 0;
+            min-width: 0;
+            border-width: 0 0 1px 0;
+
+            & .qti-block {
+                border-width: 0 0 1px 0;
+            }
 
             @media (hover: hover) {
                 &:not(.empty):hover {
